Bug 99630 - return uninitialized status in cairo_pdf_interchange_walk_struct_tree (today's snapshot of v1.15.4)
Summary: return uninitialized status in cairo_pdf_interchange_walk_struct_tree (today'...
Status: RESOLVED FIXED
Alias: None
Product: cairo
Classification: Unclassified
Component: pdf backend (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Adrian Johnson
QA Contact: cairo-bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-02-01 19:45 UTC by is
Modified: 2017-02-01 20:19 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description is 2017-02-01 19:45:14 UTC
when creating PDF file, I have received a run-time-check failure saying that cairo_pdf_interchange_walk_struct_tree returns uninitialized status.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.