pdf: don't return uninitialized status

https://bugs.freedesktop.org/show_bug.cgi?id=99630